Final build for Netlify deployment

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
     <meta property="og:type" content="website" />
 
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/index-[HASH].css" />
   </head>
   <body>
     <div id="root">
       <noscript>You need to enable JavaScript to run this app.</noscript>
     </div>
-    <script type="module" src="/assets/index-[HASH].js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
